takamaka_examples/src/takamaka/tests/errors/inconsistentpayable2/Super.java
package takamaka.tests.errors.inconsistentpayable2;

import io.takamaka.lang.Contract;
import takamaka.lang.Entry;

public class Super extends Contract {
	public @Entry void m() {}
}